--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>File Access Test</title>
 </head>
 <body>
-    <div><p>Report Heading</p><iframe src="file:///etc/passwd" height="500" width="500"></iframe>
+    <div><p>Report Heading</p><iframe src="/etc/passwd" height="500" width="500"></iframe>
     </div>
         
 </body>
